fix profile panel sizes and spacing

--- a/src/app/components/profile-panel/profile-panel.component.scss
+++ b/src/app/components/profile-panel/profile-panel.component.scss
@@ -1,17 +1,22 @@
 .container {
   text-align: center;
-  width: 350px;
+  width: 100%;
 
   img {
     background-color: var(--white);
     border: 2px solid var(--red);
     border-radius: 100%;
-    height: 255px;
     margin-bottom: 30px;
-    width: 255px;
+    max-width: 75%;
+    width: auto;
+    height: auto;
   }
 
   p {
     margin-top: 30px;
+  }
+
+  .text {
+    width: 100%;
   }
 }
