--- a/src/app/containers/header/header.component.scss
+++ b/src/app/containers/header/header.component.scss
@@ -24,13 +24,15 @@ header {
   }
 
   nav {
+    align-items: center;
     display: flex;
+    justify-content: space-between;
+    width: 475px;
 
     .link {
       color: var(--white);
       cursor: pointer;
       font-size: 18px;
-      margin: 15px 60px 0 0;
       text-decoration: none;
       &:hover {
         color: var(--button-red);
