--- a/src/app/containers/services/services.component.scss
+++ b/src/app/containers/services/services.component.scss
@@ -22,6 +22,7 @@
 
     profile-panel {
       margin-bottom: 50px;
+      width: 30%;
     }
   }
 
